<resources>
    <string name="app_name">BestWing_POS</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FlavorHoneyHot">HoneyHot</string>
    <string name="Quantity12">12</string>
    <string name="Quantity20">20</string>
    <string name="FlavorHot">Hot</string>
    <string name="SplitFlavor">Split</string>
    <string name="CheeseBurger">CheeseBurger</string>
    <string name="Quantity6">6</string>
    <string name="Quantity10">10</string>
    <string name="Quantity15">15</string>
    <string name="Quantity30">30</string>
    <string name="Quantity40">40</string>
    <string name="Quantity50">50</string>
    <string name="Quantity100">100</string>
    <string name="WingQuantity">Choose Wing Quantity</string>
    <string name="FlavorMild">Mild</string>
    <string name="FlavorMed">Med</string>
    <string name="FlavorTY">Teriyaki</string>
    <string name="FlavorLP">LemonPepper</string>
    <string name="FlavorBR">Braised</string>
    <string name="FlavorBBQ">BBQ</string>
    <string name="sideFF">French Fries</string>
    <string name="sideFR">Regular FriedRice</string>
    <string name="addChicken">+Chicken</string>
    <string name="addBeef">+Beef</string>
    <string name="addShrimp">+Shrimp</string>
    <string name="addVeg">+Veggies</string>
    <string name="addHouse">+ House</string>
    <string name="addHH">+HH</string>
    <string name="addTY">+TY</string>
    <string name="clearDetail">Clear Detail</string>
    <string name="clear"><![CDATA[<-clear]]></string>
    <string name="sideItem">Side Item</string>
    <string name="itemDetail">Item Detail</string>
    <string name="totalBeforeTax">Total Before Tax: </string>
    <string name="pay">Pay</string>
    <string name="totalPrice">Total Before Tax:\n       \nTotal After Tax:\n    </string>
    <string name="FlavorHoneyMed">Med</string>
    <string name="Drink">Drink</string>
    <string name="afterTax">Total After Tax:</string>
    <string name="phillySteak">Philly Steak</string>
    <string name="phillyChicken">Philly Chicken</string>
    <string name="hamburger">Hamburger</string>
    <string name="cheeseburger">Cheeseburger</string>
    <string name="doubleCheeseburger">Double Cheeseburger</string>
    <string name="fishSandwich">Fish Sandwich</string>
    <string name="gyro">Gyro</string>
    <string name="hamClub">Ham Club</string>
    <string name="turkeyClub">Turkey Club</string>
    <string name="gardenSalad">Garden Salad</string>
    <string name="turkeySalad">Turkey Salad</string>
    <string name="hamSalad">Ham Salad</string>
    <string name="chefSalad">Chef Salad</string>
    <string name="grilledChickenSalad">Grilled Chicken Salad</string>
    <string name="fishSalad">Fish Salad</string>
    <string name="regularFriedRice">Regular Fried Rice</string>
    <string name="vegieFriedRice">Veg Fried Rice</string>
    <string name="beefFriedRice">Beef Fried Rice</string>
    <string name="chickenFriedRice">Chicken Fried Rice</string>
    <string name="shrimpFriedRice">Shrimp Fried Rice</string>
    <string name="houseFriedRice">House Fried Rice</string>
    <string name="salad">Salad</string>
    <string name="friedRice">Fried Rice</string>
    <string name="twoFish">2pc Fish /w Fries and hush Puppies</string>
    <string name="threeFish">3pc Fish /w Fries and hush Puppies</string>
    <string name="fourFish">4pc Fish /w Fries and hush Puppies</string>
    <string name="fiveFish">5pc Fish /w Fries and hush Puppies</string>
    <string name="sixShrimp">6pc Jumbo Shrimps /w Fries</string>
    <string name="twelveShrimp">12pc Jumbo Shrimps /w Fries</string>
    <string name="fourTender">4pc Tender w/fries</string>
    <string name="addTender">add Extra Tender</string>
    <string name="whitingFish">Fish</string>
    <string name="jumboShrimp">Jumbo Shrimp</string>
    <string name="Tenders">Tenders</string>
    <string name="smallFries">Small Fries</string>
    <string name="largeFries">Large Fries</string>
    <string name="cornDog">Corn Dog</string>
    <string name="crabRagoon">Crab Ragoon 2pc</string>
    <string name="shrimpRoll">Shrimp Roll</string>
    <string name="vegRoll">Veg Roll</string>
    <string name="steakRoll">Steak and Cheese Roll</string>
    <string name="eggRoll">Egg Rolls</string>
    <string name="additionalSide">Additional Side</string>
    <string name="canSoda">canSoda</string>
    <string name="bottleSoda">bottleSoda</string>
    <string name="largeLemonade">largeLemonade</string>
    <string name="medLemonade">medLemonade</string>
    <string name="noIce">No Ice</string>
    <string name="lightIce">Light Ice</string>
    <string name="heavyIce">Heavy Ice</string>
    <string name="ice_cube_img">ice cube img</string>
    <string name="lettuce">lettuce</string>
    <string name="tomato">tomato</string>
    <string name="jelopeno">jelopeno</string>
    <string name="bananaPepper">bananaPepper</string>
    <string name="pickles">pickles</string>
    <string name="blackOlive">Black Olive</string>
    <string name="onion">onion</string>
    <string name="peas">peas</string>
    <string name="carrots">carrots</string>
    <string name="mayo">mayo</string>
    <string name="ketchup">ketchup</string>
    <string name="mustard">mustard</string>
    <string name="noBroccoli">No Broccoli</string>
    <string name="noEgg">No Egg</string>
    <string name="no">No</string>
    <string name="extra">Extra</string>
    <string name="extraEgg">Extra Egg</string>
    <string name="extraMeat">Extra Meat</string>
    <string name="specialOption">Special Option</string>
    <string name="itemFlavor">Item Flavor</string>


</resources>
